changes to Edit Data page

--- a/public/index.html
+++ b/public/index.html
@@ -356,7 +356,7 @@ function allTrials(query, process) {
                     </tr>
                 </thead>
                 <tr>
-                    <td style="text-align: left;">D111<a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D111<a style = "float:right; font-size:13px" href="#">edit</a>
                       <i style = "float:right" class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
@@ -366,7 +366,7 @@ function allTrials(query, process) {
 
                 </tr>
                 <tr>
-                    <td style="text-align: left;">D112<a style = "float:right; font-size:13px" href="ff">edit  </a>
+                    <td style="text-align: left;">D112<a style = "float:right; font-size:13px" href="#">edit  </a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#d9edf7">No</td>
                     <td style = "background-color:#D0F0C2">Yes</td>
@@ -375,8 +375,7 @@ function allTrials(query, process) {
                     <td style = "background-color:#D0F0C2">Yes</td>
                 </tr>                                </tr>
                 <tr>
-                    <td style="text-align: left;">D113
-                      <a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D113<a style = "float:right; font-size:13px" href="ff">edit</a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
@@ -385,7 +384,7 @@ function allTrials(query, process) {
                     <td style = "background-color:#d9edf7">No</td>
                 </tr>
                 <tr>
-                    <td style="text-align: left;">D114<a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D114<a style = "float:right; font-size:13px" href="#">edit</a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
@@ -394,7 +393,7 @@ function allTrials(query, process) {
                     <td style = "background-color:#d9edf7">No</td>
                 </tr>
                 <tr>
-                    <td style="text-align: left;">D115<a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D115<a style = "float:right; font-size:13px" href="#">edit</a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
@@ -403,7 +402,7 @@ function allTrials(query, process) {
                     <td style = "background-color:#d9edf7">No</td>
                 </tr>
                 <tr>
-                    <td style="text-align: left;">D116<a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D116<a style = "float:right; font-size:13px" href="#">edit</a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
@@ -412,7 +411,7 @@ function allTrials(query, process) {
                     <td style = "background-color:#d9edf7">No</td>
                 </tr>
                 <tr>
-                    <td style="text-align: left;">D117<a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D117<a style = "float:right; font-size:13px" href="#">edit</a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
@@ -421,7 +420,7 @@ function allTrials(query, process) {
                     <td style = "background-color:#d9edf7">No</td>
                 </tr>
                 <tr>
-                    <td style="text-align: left;">D118<a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D118<a style = "float:right; font-size:13px" href="#">edit</a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
@@ -430,7 +429,7 @@ function allTrials(query, process) {
                     <td style = "background-color:#d9edf7">No</td>
                 </tr>
                 <tr>
-                    <td style="text-align: left;">D119<a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D119<a style = "float:right; font-size:13px" href="#">edit</a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
@@ -439,7 +438,7 @@ function allTrials(query, process) {
                     <td style = "background-color:#d9edf7">No</td>
                 </tr>
                 <tr>
-                    <td style="text-align: left;">D120<a style = "float:right; font-size:13px" href="ff">edit</a>
+                    <td style="text-align: left;">D120<a style = "float:right; font-size:13px" href="#">edit</a>
                       <i style = "float:right " class="icon-pencil"></i></td>
                     <td style = "background-color:#D0F0C2">Yes</td>
                     <td style = "background-color:#d9edf7">No</td>
